# mbaas-chat

./: .gitignore  README.md  dev.cfg
client_ios/chat/chat/: Podfile
client_ios/chat/chat/chat/: AppDelegate.swift  ViewController.swift
client_ios/chat/chat/chat.xcodeproj/: project.pbxproj
client_ios/chat/chat/chat.xcodeproj/project.xcworkspace/xcuserdata/daisuke.sugisawa.ts.xcuserdatad/: UserInterfaceState.xcuserstate
client_ios/chat/chat/chat.xcodeproj/xcuserdata/daisuke.sugisawa.ts.xcuserdatad/xcschemes/: chat.xcscheme  xcschememanagement.plist
client_ios/chat/chat/chat.xcworkspace/xcuserdata/daisuke.sugisawa.ts.xcuserdatad/: UserInterfaceState.xcuserstate
client_ios/chat/chat/chat/Assets.xcassets/_guest.imageset/: Contents.json
client_ios/chat/chat/chat/Assets.xcassets/_logo.imageset/: Contents.json
client_ios/chat/chat/chat/cell/: GroupViewCell.swift  MessageViewCell.swift  MyMessageViewCell.swift  SystemMessageViewCell.swift
client_ios/chat/chat/chat/job/: BaseJob.swift  Notify.swift  RestApi.swift
client_ios/chat/chat/chat/model/: BaseModel.swift  Group.swift  Message.swift  User.swift
client_ios/chat/chat/chat/util/: JobQueue.swift  Mb.swift  UIImageView+AFNetworking.swift
client_ios/chat/chat/chat/view/: GroupTableView.swift  MakeGroupInput.swift  MessageInput.swift  MessageTableView.swift
include/: mb_database.h  mb_def.h  mb_server.h
server/: CMakeLists.txt  entry.cpp
server/databases/: mb_interface.cpp
server/databases/plugins/: mb_sqlite3.cpp  mb_sqlite3.h  mb_sqlite3_group.cpp  mb_sqlite3_info.cpp  mb_sqlite3_message.cpp  mb_sqlite3_user.cpp
server/routes/: del_group.cpp  del_message.cpp  del_user.cpp  get_group.cpp  get_info.cpp  get_message.cpp  get_user.cpp  new_group.cpp  new_message.cpp  new_user.cpp  upd_user.cpp
server/setup/: notify_server.cpp  start_server.cpp
server/test/: CMakeLists.txt
server/test/unit_test/: mbdatabase_sqlite_test.cpp  route_new_user_test.cpp  route_new_user_test_to_find.cpp  route_user_rm_test.cpp
